--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-    <main>
-        <h1>Hori<span class="seo" aria-details="seo">seo</span>n</h1>
+    <header>
+        <h1>Hori<span class="seo" aria-details="different colored text">seo</span>n</h1>
         <nav>
             <ul>
                 <li>
@@ -24,40 +24,35 @@
                 </li>
             </ul>
         </nav>
-    </main>
+    </header>
 
-        <section id="hero">
-        <img alt="background image of a digital marketing meeting" src="./assets/images/digital-marketing-meeting.jpg" />
-        </section>
-        <section>
-            <header class="content" id="search-engine-optimization">
+    <main>
+        <img class="hero" alt="background image of a digital marketing meeting" src="./assets/images/digital-marketing-meeting.jpg" />
+
+        <section class="content" id="search-engine-optimization">
                 <img alt="Search Engine Optimization image that has a laptop, pens, and notepad." src="./assets/images/search-engine-optimization.jpg" class="float-left" />
                 <h2>Search Engine Optimization</h2>
                 <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
                 </p>
-            </header>
         </section>
-        <section>
-            <header class="content" id="online-reputation-management">
+        <section class="content" id="online-reputation-management">
                 <img alt="Online Reputation Management image that contains a laptop with a reputation chart on the screen." src="./assets/images/online-reputation-management.jpg" class="float-right" />
                 <h2>Online Reputation Management</h2>
                 <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
                 </p>
-            </header>
         </section>
-        <section>
-            <header class="content" id="social-media-marketing">
+        <section  class="content" id="social-media-marketing">
                 <img alt="Social Media Marketing image that contains a group of people looking through labels and stickers on a table." src="./assets/images/social-media-marketing.jpg" class="float-left" />
                 <h2>Social Media Marketing</h2>
                 <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
                 </p>
-            </header>
         </section>
 
-        <aside class="benefits">
+        <section class="benefits">
+
         <div id="benefit">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
@@ -81,13 +76,11 @@
             As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </div>
-        </aside>
-
+        </section>
+    </main>
     <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
-        <p>
-            &copy; 2023 Horiseon Social Solution Services, Inc.
-        </p>
+        <p>&copy; 2023 Horiseon Social Solution Services, Inc.</p>
     </footer>
 
 </body>
